# pure-analytics

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.ingestion  README.md  docker-compose.yml  fly.api.toml
api/: Cargo.toml
api/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  models.rs
ingestion/: Cargo.toml
ingestion/src/: config.rs  event_type.rs  lib.rs  main.rs  pure_api.rs  retry.rs
migrations/: 20250101000001_create_products_table.sql  20250101000002_create_transactions_table.sql  20250101000003_add_type_to_transactions.sql  20250101000004_add_market_data_to_products.sql  20250101000005_fix_market_data_precision.sql  20250101000006_recreate_market_data_as_double.sql  20250101000007_force_fix_market_data_types.sql  20250101000008_add_image_url_to_products.sql
web/: Dockerfile  fly.toml  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: BuySellDemandChart.tsx  ProductShow.tsx  ProductStats.tsx  TransactionList.tsx
