[workspace]
members = [
    "common",
    "ingestion",
    "api",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for data ingestion
reqwest = { version = "0.12", features = ["json"] }

# Web framework for API
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
